# lexitalk

./: .gitignore  README.md  cli_app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  ui_utils.py
.streamlit/: config.toml
core/: __init__.py  config.py  data_loader.py  database.py  embedding.py  engine.py  index_builder.py  index_loader.py  metadata.py  st_config.py  st_utils.py  utils.py
data/: sample_questions.txt
data/embedding/: sample-embeddings.txt
data/raw/: lex_transcripts_sample.txt
data/youtube_playlist/: urls.txt  videos.csv  videos_podcast_episodes.csv
scripts/: generate_new_embeddings.py  insert_embedded_text_to_mongo.py  update_youtube_metadata.py
tests/: test_embedding.py  test_st_utils.py  test_utils.py
