[tool.poetry]
name = "lexitalk"
version = "0.1.0"
description = "Explore Lex Fridman Podcast Transcripts with a smart chatbot"
authors = ["Qasem Nick <qniksefat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
